vlib/v/checker/tests/typedef_attr_v_struct_err.vv
[typedef]
struct Point{}

fn main() {
    p := Point{}
    println(p)
}
